--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-numpy==1.21.0
-pandas==1.3.0
-matplotlib==3.4.2
-tensorflow==2.5.0
+numpy == 1.26.4
+pandas == 2.2.2
+tensorflow == 2.15.0
+matplotlib == 3.9.2
+tf-agents == 0.19.0
+tf-keras == 2.15.0
 csp==0.0.5
 tqdm==4.66.5
